--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0-beta8",
+  "version": "6.0.0-beta9",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -12,7 +12,7 @@
   "files": [
     "dist/**/*",
     "src/js/**/*.ts",
-    "src/sass/**/*.scss",
+    "src/scss/**/*.scss",
     "types/**/*"
   ],
   "scripts": {
@@ -21,7 +21,7 @@
     "build": "node ./build/copyToDist.js && npm run rollup",
     "build:plugins": "node ./build/plugins.js",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir types",
-    "sass": "sass ./src/sass/tempus-dominus.scss ./dist/css/tempus-dominus.css",
+    "sass": "sass src/scss/tempus-dominus.scss ./dist/css/tempus-dominus.css",
     "rollup": "rollup -c ./build/rollup.config.js",
     "rollup-watch": "rollup -c ./build/rollup.config.js -w",
     "prettier": "prettier --write .",
