--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -14,8 +14,8 @@ jobs:
           nuget-version: '6.x'
       - name: Pack NuGet
         run: | 
-         nuget pack src/nuget/TempusDominus.nuspec -Verbosity detailed -NonInteractive -NoPackageAnalysis -BasePath $env:SourcesPath
-         nuget pack src/nuget/TempusDominus.scss.nuspec -Verbosity detailed -NonInteractive -NoPackageAnalysis -BasePath $env:SourcesPath
+         nuget pack src/nuget/TempusDominus.nuspec -Verbosity detailed -NonInteractive -NoPackageAnalysis
+         nuget pack src/nuget/TempusDominus.scss.nuspec -Verbosity detailed -NonInteractive -NoPackageAnalysis
       - name: Push Nuget
         run: |
           nuget push src/nuget/TempusDominus.nupkg -Source 'https://api.nuget.org/v3/index.json'
