--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.10.1"
+    "@popperjs/core": "^2.10.1",
+    "@floating-ui/dom": "^0.5.0"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
