--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.8",
     "bootstrap": "^5.2.0",
+    "browser-sync": "^2.27.10",
     "chokidar": "^3.5.3",
     "clean-css": "^5.3.1",
+    "concurrently": "^7.3.0",
     "dropcss": "^1.0.16",
     "glob": "^7.2.3",
     "globby": "^11.1.0",
