--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -43,8 +43,10 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.8",
     "bootstrap": "^5.2.0",
+    "browser-sync": "^2.27.10",
     "chokidar": "^3.5.3",
     "clean-css": "^5.3.1",
+    "concurrently": "^7.3.0",
     "dropcss": "^1.0.16",
     "glob": "^7.2.3",
     "globby": "^11.1.0",
