--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES6",
+    "module": "es2020",
     "target": "ES6",
     "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019", "ES2021.String"],
     "moduleResolution": "node",
