--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.1",
+  "version": "6.1.1",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "@popperjs/core": "^2.10.1"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
